Upgrade to graphql-java 3.0.0+